@startuml Library Management System

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b><color:red>PK: </color></b>x
!define foreign_key(x) <b><color:blue>FK: </color></b>x
!define attribute(x) <b><color:black></color></b>x

Table(Authors, "Authors") {
    +primary_key(AuthorID: NUMBER)
    +attribute(Name: VARCHAR2(100))
    +attribute(Bio: CLOB)
    +attribute(Nationality: VARCHAR2(50))
}

Table(Books, "Books") {
    +primary_key(BookID: NUMBER)
    +attribute(Title: VARCHAR2(255))
    +foreign_key(AuthorID: NUMBER)
    +attribute(PublishedDate: DATE)
}

Table(Categories, "Categories") {
    +primary_key(CategoryID: NUMBER)
    +attribute(CategoryName: VARCHAR2(100))
}

Table(BookCategories, "BookCategories") {
    +primary_key(BookID: NUMBER)
    +primary_key(CategoryID: NUMBER)
}

Table(Borrowings, "Borrowings") {
    +primary_key(BorrowID: NUMBER)
    +foreign_key(BookID: NUMBER)
    +attribute(BorrowDate: DATE)
    +attribute(ReturnDate: DATE)
}

' Relationships
Authors "1" -- "0..*" Books : writes >
Books "1" -- "0..*" BookCategories : has >
Categories "1" -- "0..*" BookCategories : contains >
Books "1" -- "0..*" Borrowings : borrowed_in >

note bottom of Authors
  One author can write many books
end note

note bottom of BookCategories
  Junction table for many-to-many
  relationship between Books
  and Categories
end note

@enduml